; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/redscarf_iiplus/verd/keymaps/alittlepeace/extr_keymap.c_led_update_user.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/redscarf_iiplus/verd/keymaps/alittlepeace/extr_keymap.c_led_update_user.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @led_update_user(i64 %0) #0 {
  %2 = alloca %struct.TYPE_3__, align 8
  %3 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 0
  store i64 %0, i64* %3, align 8
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32 @layer_on(i32 1)
  br label %11

9:                                                ; preds = %1
  %10 = call i32 @layer_off(i32 1)
  br label %11

11:                                               ; preds = %9, %7
  ret i32 1
}

declare dso_local i32 @layer_on(i32) #1

declare dso_local i32 @layer_off(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
